// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: TypeaheadMultiple renderToken ui: Component: TypeaheadMultiple => renderToken => ui 1`] = `
<Tag
  className="align-self-center"
  key="1337"
  onRemove={[Function]}
  text="42"
/>
`;

exports[`Component: TypeaheadMultiple ui with value: Component: TypeaheadMultiple => ui => with value 1`] = `
<FormGroup
  className=""
  tag="div"
>
  <Label
    for="bestFriend"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    Best friend
  </Label>
  <div
    className=""
  >
    <withAsync(Component)
      delay={200}
      id="bestFriend"
      inputProps={
        Object {
          "className": "form-control",
          "value": Array [
            Object {
              "active": true,
              "email": "admin@42.nl",
              "firstName": "admin",
              "id": 42,
              "lastName": "user",
              "roles": Array [
                "ADMIN",
              ],
            },
          ],
        }
      }
      isLoading={false}
      minLength={2}
      multiple={true}
      onChange={[Function]}
      onSearch={[Function]}
      options={Array []}
      placeholder="Please provide your best friend"
      promptText="Type to search..."
      renderToken={[Function]}
      searchText="Searching..."
      selected={
        Array [
          Object {
            "label": "admin@42.nl",
            "value": Object {
              "active": true,
              "email": "admin@42.nl",
              "firstName": "admin",
              "id": 42,
              "lastName": "user",
              "roles": Array [
                "ADMIN",
              ],
            },
          },
        ]
      }
      useCache={true}
    />
  </div>
  Some error
</FormGroup>
`;

exports[`Component: TypeaheadMultiple ui without label: Component: TypeaheadMultiple => ui => without label 1`] = `
<FormGroup
  className=""
  tag="div"
>
  <div
    className=""
  >
    <withAsync(Component)
      delay={200}
      inputProps={
        Object {
          "className": "form-control",
          "value": Array [
            Object {
              "active": true,
              "email": "admin@42.nl",
              "firstName": "admin",
              "id": 42,
              "lastName": "user",
              "roles": Array [
                "ADMIN",
              ],
            },
          ],
        }
      }
      isLoading={false}
      minLength={2}
      multiple={true}
      onChange={[Function]}
      onSearch={[Function]}
      options={Array []}
      placeholder="Please provide your best friend"
      promptText="Type to search..."
      renderToken={[Function]}
      searchText="Searching..."
      selected={
        Array [
          Object {
            "label": "admin@42.nl",
            "value": Object {
              "active": true,
              "email": "admin@42.nl",
              "firstName": "admin",
              "id": 42,
              "lastName": "user",
              "roles": Array [
                "ADMIN",
              ],
            },
          },
        ]
      }
      useCache={true}
    />
  </div>
  Some error
</FormGroup>
`;

exports[`Component: TypeaheadMultiple ui without placeholder: Component: TypeaheadMultiple => ui => without placeholder 1`] = `
<FormGroup
  className=""
  tag="div"
>
  <Label
    for="bestFriend"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    Best friend
  </Label>
  <div
    className=""
  >
    <withAsync(Component)
      delay={200}
      id="bestFriend"
      inputProps={
        Object {
          "className": "form-control",
          "value": Array [
            Object {
              "active": true,
              "email": "admin@42.nl",
              "firstName": "admin",
              "id": 42,
              "lastName": "user",
              "roles": Array [
                "ADMIN",
              ],
            },
          ],
        }
      }
      isLoading={false}
      minLength={2}
      multiple={true}
      onChange={[Function]}
      onSearch={[Function]}
      options={Array []}
      promptText="Type to search..."
      renderToken={[Function]}
      searchText="Searching..."
      selected={
        Array [
          Object {
            "label": "admin@42.nl",
            "value": Object {
              "active": true,
              "email": "admin@42.nl",
              "firstName": "admin",
              "id": 42,
              "lastName": "user",
              "roles": Array [
                "ADMIN",
              ],
            },
          },
        ]
      }
      useCache={true}
    />
  </div>
  Some error
</FormGroup>
`;
